log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
      - name: log-output
        emptyDir:
          sizeLimit: 20Mi
      containers:
        - name: log-reader
          image: pjmartin/log-reader:1.10.1
          ports:
            - name: http
              containerPort: 3000
          imagePullPolicy: Always
          volumeMounts:
            - name: log-output
              mountPath: /app/logs

        - name: log-writer
          image: pjmartin/log-writer:1.10
          imagePullPolicy: Always
          volumeMounts:
            - name: log-output
              mountPath: /app/logs
